site-update+changelog
Info in the guide about bigger

--- a/index.html
+++ b/index.html
@@ -779,7 +779,9 @@
 			</div>
 
 			<div class="ContentHeader" multi_id="congratulations"><span class="ContentHeaderTitle">Congratulations</span>: You have posted original content!</div>
-			<div class="ContentBodyStub"></div>
+			<div class="ContentBody">
+				<p>If you have issues posting, check out <a class="InternalLink" href="#bigger">bigger</a>.</p>
+			</div>
 
 
 			<span class="PageVariableDisplayInv" pvar="tips">
