--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="TitleContainer">
 	<div class="TitleContainerInner"><a class="Title" href="">4cs</a><div class="AuthorContainer"><a class="AuthorLink" href="https://github.com/dnsev">dnsev</a></div>
 	</div><div class="SubTitleSeparator">/</div><div class="TitleContainerInner"><div class="SubTitleContainer"><div class="SubTitle">4chan Media Player</div><a class="Version" href="#changes"></a></div>
-	<div class="SubTitleDescription"><a class="NavigationLink NavigationLinkCurrent" id="navigation_install" href="https://raw.github.com/dnsev/4cs/master/web/4cs.user.js">install</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_changes" href="changelog.txt">changes</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_issues" href="https://github.com/dnsev/4cs/issues">issues</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_source" href="https://github.com/dnsev/4cs">source</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_about" href="#about">about</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_bigger" href="#bigger">bigger</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_guide" href="#guide">guide</a></div>
+	<div class="SubTitleDescription"><a class="NavigationLink NavigationLinkCurrent" id="navigation_install" href="https://raw.github.com/dnsev/4cs/master/web/4cs.user.js">install</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_changes" href="changelog.txt">changes</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_issues" href="https://github.com/dnsev/4cs/issues">issues</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_source" href="https://github.com/dnsev/4cs">source</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_about" href="#about">about</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_bigger" href="#bigger">bigger</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_guide" href="#guide">guide</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_qa" href="#qa">q&amp;a</a></div>
 	</div>
 </div>
 
@@ -844,6 +844,153 @@
 			</div>
 		</div>
 
+	</div>
+	<div class="Content ContentWidth" id="content_qa">
+		<div class="ContentHeader"><span class="ContentHeaderTitle">Questions &amp; Answers</span>:</div>
+		<div class="ContentBody">
+
+			<div class="QA InternalLink" multi_id="use" href="#.?highlight=use">
+				<div><span>Q)</span><span>How do I use this?</span></div>
+				<div><span>A)</span><span>Follow the <a href="#install" class="InternalLink">install</a> directions, then click "<a class="ImageLink" href="image_post.png" href_update="#qa?activate=post" target="_blank" multi_id="post">sound</a><div class="ImageDescription">
+					<ul>
+						<li>Click the "sounds" image located in the image</li>
+					</ul>
+				</div>" links on posts with images</span></div>
+			</div>
+						
+			<div class="QASeparator"></div>
+
+			<div class="QA InternalLink" multi_id="update" href="#.?highlight=update">
+				<div><span>Q)</span><span>How do I update?</span></div>
+				<div><span>A)</span><span>Same as <a href="#install" class="InternalLink">installing</a>; your browser might even automatically do it for you</span></div>
+			</div>
+
+			<div class="QASeparator"></div>
+
+			<div class="QA InternalLink" multi_id="work" href="#.?highlight=work">
+				<div><span>Q)</span><span>How does this work?</span></div>
+				<div><span>A)</span><span>Small sound files are stored inside an image file such that the image remains intact</span></div>
+			</div>
+
+			<div class="QASeparator"></div>
+
+			<div class="QA InternalLink" multi_id="save" href="#.?highlight=save">
+				<div><span>Q)</span><span>How do I save images with sound?</span></div>
+				<div><span>A)</span><span><a class="ImageLink" href="image_player5.png" href_update="#qa?activate=saving" target="_blank" multi_id="saving">Save</a><div class="ImageDescription">
+					<ul>
+						<li>Middle clicking the image in the player will open the image in a new tab</li>
+						<li>Clicking the "I" button of the playlist item will also open the image</li>
+					</ul>
+				</div> the image as you normally would; the sound will stay</span></div>
+			</div>
+
+			<div class="QASeparator"></div>
+
+			<div class="QA InternalLink" multi_id="sound" href="#.?highlight=sound">
+				<div><span>Q)</span><span>How do I extract sounds from the images?</span></div>
+				<div><span>A)</span><span>You can <a class="ImageLink" href="image_player6.png" href_update="#qa?activate=batch_download" target="_blank" multi_id="batch_download">batch download</a><div class="ImageDescription">
+					<ul>
+						<li>Clicking the [D] in the top right corner opens this menu</li>
+						<li>Click one of the 3 links to generate a download link</li>
+						<li>Be sure to save the resulting file with a .zip extension</li>
+					</ul>
+				</div> your playlist, or <a class="ImageLink" href="image_saving.png" href_update="#qa?activate=save_dialogue" target="_blank" multi_id="save_dialogue">download</a><div class="ImageDescription">
+					<ul>
+						<li>A popup should appear with the file named appropriately after clicking a playlist item's "S" button</li>
+					</ul>
+				</div> <a class="ImageLink" href="image_player5.png" href_update="#qa?activate=single_download" target="_blank" multi_id="single_download">a single item</a><div class="ImageDescription">
+					<ul>
+						<li>Left clicking the "S" button of the playlist item open a save dialogue</li>
+						<li>Middle clicking the playlist item will open the sound in a new tab</li>
+					</ul>
+				</div></span></div>
+			</div>
+
+			<div class="QASeparator"></div>
+
+			<div class="QA InternalLink" multi_id="playback" href="#.?highlight=playback">
+				<div><span>Q)</span><span>How can I play these back?</span></div>
+				<div><span>A)</span><span>You can drag and drop files from your computer onto the <a href="play/" target="_blank">player</a> at any time</span></div>
+			</div>
+
+
+			<div class="QASeparator Large"></div>
+
+
+			<div class="QA InternalLink" multi_id="embedded_file" href="#.?highlight=embedded_file">
+				<div><span>Q)</span><span>Why do I keep getting "embedded file" errors?</span></div>
+				<div><span>A)</span><span>Your files might not be up to date. Upload them with the <a class="ImageLink" href="image_oc_guide6.png" href_update="#qa?activate=inline_uploader" target="_blank" multi_id="inline_uploader">inline uploader</a><div class="ImageDescription">
+					<ul>
+						<li>The uploader appears after checking the Sounds checkbox in the quick reply window</li>
+					</ul>
+				</div>, or convert them to the proper type</span></div>
+			</div>
+
+			<div class="QASeparator"></div>
+
+			<div class="QA InternalLink" multi_id="embedded_file2" href="#.?highlight=embedded_file2">
+				<div><span>Q)</span><span>"Embedded file" errors are still happening.</span></div>
+				<div><span>A)</span><span>They might not meet the filesize-to-dimensions restrictions; try <a href="#bigger" class="InternalLink">upscaling them</a></span></div>
+			</div>
+
+			<div class="QASeparator"></div>
+
+			<div class="QA InternalLink" multi_id="bad_file_type" href="#.?highlight=bad_file_type">
+				<div><span>Q)</span><span>Why do I get "bad file type" in the inline uploader?</span></div>
+				<div><span>A)</span><span>Only .ogg audio is supported; .mp3 and other types are not</span></div>
+			</div>
+
+			<div class="QASeparator"></div>
+
+			<div class="QA InternalLink" multi_id="connection_error" href="#.?highlight=connection_error">
+				<div><span>Q)</span><span>Why do I get "connection error" when posting?</span></div>
+				<div><span>A)</span><span>Moot's problem, not mine</span></div>
+			</div>
+
+
+			<div class="QASeparator Large"></div>
+
+
+			<div class="QA InternalLink" multi_id="own" href="#.?highlight=own">
+				<div><span>Q)</span><span>How do I make my own?</span></div>
+				<div><span>A)</span><span>Follow <a href="#guide" class="InternalLink">the guide</a>, or convert your audio to .ogg and use the <a href="#qa?activate=inline_uploader" class="InternalLink">inline uploader</a></span></div>
+			</div>
+
+			<div class="QASeparator"></div>
+
+			<div class="QA InternalLink" multi_id="contribute" href="#.?highlight=contribute">
+				<div><span>Q)</span><span>How do I contribute?</span></div>
+				<div><span>A)</span><span>Make <a href="#guide" class="InternalLink">original content</a> and post it / help anyone worth helping</span></div>
+			</div>
+
+
+			<div class="QASeparator Large"></div>
+
+
+			<div class="QA InternalLink" multi_id="broken" href="#.?highlight=broken">
+				<div><span>Q)</span><span>Why does <i>&lt;feature&gt;</i> not work?</span></div>
+				<div><span>A)</span><span>There might be a problem with your setup, or a bug; open <a href="https://github.com/dnsev/4cs/issues" target="_blank" class="ExternalLink">an issue report</a></span></div>
+			</div>
+
+			<div class="QASeparator"></div>
+
+			<div class="QA InternalLink" multi_id="feature" href="#.?highlight=feature">
+				<div><span>Q)</span><span>Can you change how <i>&lt;feature&gt;</i> works?</span></div>
+				<div><span>A)</span><span>There are many <a class="ImageLink" href="image_settings.png" href_update="#qa?activate=settings" target="_blank" multi_id="settings">settings</a><div class="ImageDescription">
+					<ul>
+						<li>Available by clicking the [ Media Player ] links, or through 4chan-x 3's menu</li>
+					</ul>
+				</div> related to the script and the player; check them out first</span></div>
+			</div>
+
+			<div class="QASeparator"></div>
+
+			<div class="QA InternalLink" multi_id="new" href="#.?highlight=new">
+				<div><span>Q)</span><span>Can you add <i>&lt;new feature&gt;</i>?</span></div>
+				<div><span>A)</span><span>If you want new functionality or options, suggest it in <a href="https://github.com/dnsev/4cs/issues" target="_blank" class="ExternalLink">an issue report</a></span></div>
+			</div>
+
+		</div>
 	</div>
 </div>
 
