--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
 		<div class="ContentHeader"><span class="ContentHeaderTitle">Questions &amp; Answers</span>:</div>
 		<div class="ContentBody">
 
-			<div class="QA InternalLink" multi_id="use" href="#.?highlight=use">
+			<div class="QA InternalLink" multi_id="use" href="#.?scroll=use&highlight=use">
 				<div><span>Q)</span><span>How do I use this?</span></div>
 				<div><span>A)</span><span>Follow the <a href="#install" class="InternalLink">install</a> directions, then click "<a class="ImageLink" href="image_post.png" href_update="#qa?activate=post" target="_blank" multi_id="post">sound</a><div class="ImageDescription">
 					<ul>
@@ -860,21 +860,21 @@
 						
 			<div class="QASeparator"></div>
 
-			<div class="QA InternalLink" multi_id="update" href="#.?highlight=update">
+			<div class="QA InternalLink" multi_id="update" href="#.?scroll=update&highlight=update">
 				<div><span>Q)</span><span>How do I update?</span></div>
 				<div><span>A)</span><span>Same as <a href="#install" class="InternalLink">installing</a>; your browser might even automatically do it for you</span></div>
 			</div>
 
 			<div class="QASeparator"></div>
 
-			<div class="QA InternalLink" multi_id="work" href="#.?highlight=work">
+			<div class="QA InternalLink" multi_id="work" href="#.?scroll=work&highlight=work">
 				<div><span>Q)</span><span>How does this work?</span></div>
 				<div><span>A)</span><span>Small sound files are stored inside an image file such that the image remains intact</span></div>
 			</div>
 
 			<div class="QASeparator"></div>
 
-			<div class="QA InternalLink" multi_id="save" href="#.?highlight=save">
+			<div class="QA InternalLink" multi_id="save" href="#.?scroll=save&highlight=save">
 				<div><span>Q)</span><span>How do I save images with sound?</span></div>
 				<div><span>A)</span><span><a class="ImageLink" href="image_player5.png" href_update="#qa?activate=saving" target="_blank" multi_id="saving">Save</a><div class="ImageDescription">
 					<ul>
@@ -886,7 +886,7 @@
 
 			<div class="QASeparator"></div>
 
-			<div class="QA InternalLink" multi_id="sound" href="#.?highlight=sound">
+			<div class="QA InternalLink" multi_id="sound" href="#.?scroll=sound&highlight=sound">
 				<div><span>Q)</span><span>How do I extract sounds from the images?</span></div>
 				<div><span>A)</span><span>You can <a class="ImageLink" href="image_player6.png" href_update="#qa?activate=batch_download" target="_blank" multi_id="batch_download">batch download</a><div class="ImageDescription">
 					<ul>
@@ -908,16 +908,23 @@
 
 			<div class="QASeparator"></div>
 
-			<div class="QA InternalLink" multi_id="playback" href="#.?highlight=playback">
+			<div class="QA InternalLink" multi_id="playback" href="#.?scroll=playback&highlight=playback">
 				<div><span>Q)</span><span>How can I play these back?</span></div>
 				<div><span>A)</span><span>You can drag and drop files from your computer onto the <a href="play/" target="_blank">player</a> at any time</span></div>
+			</div>
+
+			<div class="QASeparator"></div>
+
+			<div class="QA InternalLink" multi_id="queue" href="#.?scroll=queue&highlight=queue">
+				<div><span>Q)</span><span>Why did my loading queue stop?</span></div>
+				<div><span>A)</span><span>If your sounds stop loading, you can click the "Loading..." text on the player to skip to the next one.<br />If this occurs while "Loading All," just re-click the "Load All" link twice to restart it</span></div>
 			</div>
 
 
 			<div class="QASeparator Large"></div>
 
 
-			<div class="QA InternalLink" multi_id="embedded_file" href="#.?highlight=embedded_file">
+			<div class="QA InternalLink" multi_id="embedded_file" href="#.?scroll=embedded_file&highlight=embedded_file">
 				<div><span>Q)</span><span>Why do I keep getting "embedded file" errors?</span></div>
 				<div><span>A)</span><span>Your files might not be up to date. Upload them with the <a class="ImageLink" href="image_oc_guide6.png" href_update="#qa?activate=inline_uploader" target="_blank" multi_id="inline_uploader">inline uploader</a><div class="ImageDescription">
 					<ul>
@@ -928,21 +935,21 @@
 
 			<div class="QASeparator"></div>
 
-			<div class="QA InternalLink" multi_id="embedded_file2" href="#.?highlight=embedded_file2">
+			<div class="QA InternalLink" multi_id="embedded_file2" href="#.?scroll=embedded_file2&highlight=embedded_file2">
 				<div><span>Q)</span><span>"Embedded file" errors are still happening.</span></div>
 				<div><span>A)</span><span>They might not meet the filesize-to-dimensions restrictions; try <a href="#bigger" class="InternalLink">upscaling them</a></span></div>
 			</div>
 
 			<div class="QASeparator"></div>
 
-			<div class="QA InternalLink" multi_id="bad_file_type" href="#.?highlight=bad_file_type">
+			<div class="QA InternalLink" multi_id="bad_file_type" href="#.?scroll=bad_file_type&highlight=bad_file_type">
 				<div><span>Q)</span><span>Why do I get "bad file type" in the inline uploader?</span></div>
 				<div><span>A)</span><span>Only .ogg audio is supported; .mp3 and other types are not</span></div>
 			</div>
 
 			<div class="QASeparator"></div>
 
-			<div class="QA InternalLink" multi_id="connection_error" href="#.?highlight=connection_error">
+			<div class="QA InternalLink" multi_id="connection_error" href="#.?scroll=connection_error&highlight=connection_error">
 				<div><span>Q)</span><span>Why do I get "connection error" when posting?</span></div>
 				<div><span>A)</span><span>Moot's problem, not mine</span></div>
 			</div>
@@ -951,14 +958,14 @@
 			<div class="QASeparator Large"></div>
 
 
-			<div class="QA InternalLink" multi_id="own" href="#.?highlight=own">
+			<div class="QA InternalLink" multi_id="own" href="#.?scroll=own&highlight=own">
 				<div><span>Q)</span><span>How do I make my own?</span></div>
 				<div><span>A)</span><span>Follow <a href="#guide" class="InternalLink">the guide</a>, or convert your audio to .ogg and use the <a href="#qa?activate=inline_uploader" class="InternalLink">inline uploader</a></span></div>
 			</div>
 
 			<div class="QASeparator"></div>
 
-			<div class="QA InternalLink" multi_id="contribute" href="#.?highlight=contribute">
+			<div class="QA InternalLink" multi_id="contribute" href="#.?scroll=contribute&highlight=contribute">
 				<div><span>Q)</span><span>How do I contribute?</span></div>
 				<div><span>A)</span><span>Make <a href="#guide" class="InternalLink">original content</a> and post it / help anyone worth helping</span></div>
 			</div>
@@ -967,14 +974,14 @@
 			<div class="QASeparator Large"></div>
 
 
-			<div class="QA InternalLink" multi_id="broken" href="#.?highlight=broken">
+			<div class="QA InternalLink" multi_id="broken" href="#.?scroll=broken&highlight=broken">
 				<div><span>Q)</span><span>Why does <i>&lt;feature&gt;</i> not work?</span></div>
 				<div><span>A)</span><span>There might be a problem with your setup, or a bug; open <a href="https://github.com/dnsev/4cs/issues" target="_blank" class="ExternalLink">an issue report</a></span></div>
 			</div>
 
 			<div class="QASeparator"></div>
 
-			<div class="QA InternalLink" multi_id="feature" href="#.?highlight=feature">
+			<div class="QA InternalLink" multi_id="feature" href="#.?scroll=feature&highlight=feature">
 				<div><span>Q)</span><span>Can you change how <i>&lt;feature&gt;</i> works?</span></div>
 				<div><span>A)</span><span>There are many <a class="ImageLink" href="image_settings.png" href_update="#qa?activate=settings" target="_blank" multi_id="settings">settings</a><div class="ImageDescription">
 					<ul>
@@ -985,7 +992,7 @@
 
 			<div class="QASeparator"></div>
 
-			<div class="QA InternalLink" multi_id="new" href="#.?highlight=new">
+			<div class="QA InternalLink" multi_id="new" href="#.?scroll=new&highlight=new">
 				<div><span>Q)</span><span>Can you add <i>&lt;new feature&gt;</i>?</span></div>
 				<div><span>A)</span><span>If you want new functionality or options, suggest it in <a href="https://github.com/dnsev/4cs/issues" target="_blank" class="ExternalLink">an issue report</a></span></div>
 			</div>
