--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
 
 			<div class="QASeparator"></div>
 
-			<div class="QA InternalLink" multi_id="embedded_file2" href="#.?scroll=embedded_file2&highlight=embedded_file2">
+			<div class="QA InternalLink" multi_id="embedded_file_bigger" href="#.?scroll=embedded_file_bigger&highlight=embedded_file_bigger">
 				<div><span>Q)</span><span>"Embedded file" errors are still happening.</span></div>
 				<div><span>A)</span><span>They might not meet the filesize-to-dimensions restrictions; try <a href="#bigger" class="InternalLink">upscaling them</a></span></div>
 			</div>
