--- a/index.html
+++ b/index.html
@@ -924,6 +924,13 @@
 			<div class="QASeparator Large"></div>
 
 
+			<div class="QA InternalLink" multi_id="ajax_error" href="#.?scroll=ajax_error&highlight=ajax_error">
+				<div><span>Q)</span><span>Why do I keep getting "ajax error"?</span></div>
+				<div><span>A)</span><span>Chances are your script manager is not up to date. Update <a href="https://addons.mozilla.org/en-US/firefox/addon/greasemonkey/" target="_blank">Greasemonkey</a>. That failing, update everything</span></div>
+			</div>
+
+			<div class="QASeparator"></div>
+
 			<div class="QA InternalLink" multi_id="embedded_file" href="#.?scroll=embedded_file&highlight=embedded_file">
 				<div><span>Q)</span><span>Why do I keep getting "embedded file" errors?</span></div>
 				<div><span>A)</span><span>Your files might not be up to date. Upload them with the <a class="ImageLink" href="image_oc_guide6.png" href_update="#qa?activate=inline_uploader" target="_blank" multi_id="inline_uploader">inline uploader</a><div class="ImageDescription">
