--- a/speed/4cs-speed-test.html
+++ b/speed/4cs-speed-test.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<meta charset="UTF-8" />
+	<script>window.is_4cs_speed_test_native = true;</script>
 	<script src="4cs-speed-test.user.js"></script>
+	<script>window.is_4cs_speed_test_native = false; delete window.is_4cs_speed_test_native;</script>
 </head>
 <body>
 	Speed test
@@ -10,7 +12,5 @@
 	<div>
 		<a href="#4cs-speed-test"></a>
 	</div>
-
-	<script>setup()</script>
 </body>
 </html>
