--- a/index.html
+++ b/index.html
@@ -297,6 +297,9 @@
 
 				<div class="ReadMeConfirmBox" data-typewrite-full="true" data-typewrite-wait-before="2">
 					<a class="ReadMeConfirmButton" data-readme-button-id="6">I understand</a>
+					<div class="ReadMeFinishDisclaimer">
+						(After exiting this readme, re-click the download link to install)
+					</div>
 				</div>
 
 			</div>
